--- a/src/mdx/tenderloin.mdx
+++ b/src/mdx/tenderloin.mdx
@@ -1,27 +1,55 @@
 # Tenderloin
 
-## Ethical dilemmas when giving might enable harm
+## Are we morally obligated to give to strangers in need, if it might enable harm?
 
 ![Tenderloin area](/assets/tenderloin/Image3.jpg)
 
-### Are we morally obligated to give if our aid might enable harmful behaviors?
+Since August 2024, San Francisco streets are largely clear of homeless encampments. However, Tenderloin traditionally hosts many unhoused individuals, mentally ill patients, and drug addicts. When they ask for help, many worry they'll buy alcohol, drugs, or other items, and the givers will be funding their harmful behaviors. Others disagree: they aren't responsible for actions after the money changes hands. So, do we have the duty to give, if we think it might enable harm or misuse?
 
-<EthicalPerspective type="kant" title="Kantian Perspective">
-  Kant would assert that you still have the imperfect duty to give. As Stohr (2011) explains, 
-  the moral rightness of an action depends on whether it could be universalized to be a moral law, 
-  independently of its predicted effects. Concerns that "aid might enable harm" are subjective and 
-  lack the universality needed for a moral duty.
-</EthicalPerspective>
+### Ethical Perspectives
 
-<EthicalPerspective type="util" title="Utilitarian Approach">
-  A utilitarian approach considers whether the aid likely improves or worsens overall well-being. 
-  If giving is likely to result in harmful outcomes such as fostering addiction, it could decrease 
-  overall well-being and might be considered morally wrong, as described in Beauchamp's (2008) 
-  analysis of beneficence.
-</EthicalPerspective>
+<div className="framework-card kant">
+  <div className="framework-header">
+    <div className="framework-icon kant-icon">K</div>
+    <h4>Kantian Perspective - Imperfect duty to give</h4>
+  </div>
+  <div className="framework-body">
+    <p>In Kantian ethics, we're asked to act only on principles that we could, at the same time, will become a universal law. When the action is refusing giving aid, would you rationally choose a world in which no one ever gives? If you say yes, Kant would give you two tests:</p>
+    
+    <p>Is it logically possible? Does it conflict with what a rational person would want?</p>
+    
+    <p>These are the bases for Kant's conception of perfect duty (moral law with no exception, such as "never lie") and imperfect duty (moral law with flexibility in how and how often), respectively. While a world where no one ever gives is conceivable, as rational beings who might someday need help ourselves, we cannot consistently follow such a principle. Thus, Kant would classify giving as an imperfect duty.</p>
+    
+    <p>Kant also requires us to always treat people as ends in themselves, never merely as means. Even if you don't give this time, you must not ignore them, because it would deny their moral worth, which violates Kant's imperative to recognize each person as an autonomous rational being deserving of respect.</p>
+  </div>
+</div>
 
-<EthicalPerspective type="buddha" title="Buddhist View">
-  Buddhist texts on giving (dāna) from the Aṅguttaranikāya suggest that giving generates good merit 
-  even if the recipient misuses the aid. However, Buddhist ethics also value wisdom. If giving directly 
-  enables harm, a more discerning act of compassion might be needed.
-</EthicalPerspective> 
+<div className="framework-card util">
+  <div className="framework-header">
+    <div className="framework-icon util-icon">U</div>
+    <h4>Effective Altruism - Weighing overall impact</h4>
+  </div>
+  <div className="framework-body">
+    <p>Contrary to Kant's focus on rules and intentions, utilitarianism determines moral rightness by outcomes. Effective altruism (EA), a contemporary utilitarian approach, has a stricter requirement. It follows Peter Singer's principle:</p>
+    
+    <p>"If it is in our power to prevent something bad from happening, without thereby sacrificing anything of comparable moral importance, we ought, morally, to do it."</p>
+    
+    <p>EA frames charitable giving as a moral obligation, not an optional act of generosity. However, EA prioritizes the most cost-effective interventions that yield the greatest good, typically established charities, policy change, and social welfare programs that have empirical evidence for effectiveness, rather than one-on-one giving.</p>
+    
+    <p>This argument becomes stronger when one-on-one giving enables harm or worsens overall well-being. An effective altruist could argue that if giving to panhandlers funds addiction or criminal activity, it could decrease overall well-being of both the recipients and the community.</p>
+  </div>
+</div>
+
+<div className="framework-card buddha">
+  <div className="framework-header">
+    <div className="framework-icon buddha-icon">B</div>
+    <h4>Buddhist Perspective - Unconditional giving</h4>
+  </div>
+  <div className="framework-body">
+    <p>Buddhist ethics brings a different perspective. First, Buddhists contend that the individualist assumption that individuals are independent and self-reliant is illusory: all things are impermanent and interdependent, making our well-being inseparable from others.</p>
+    
+    <p>In Buddhism, dāna (generosity) is the first of six pāramitās (perfections/virtues) and is essential for cultivating compassion (karuṇā) and accruing merit (puñña). Giving means offering something without expectation of return; when we give freely, we loosen our attachment to possessions and the illusion that we are separate selves.</p>
+    
+    <p>However, Buddhist ethics do value wisdom and understanding. A wise approach might consider potential consequences. If giving directly enables harm, a more discerning act of compassion might be needed - perhaps giving through organizations or providing in-kind essentials rather than cash.</p>
+  </div>
+</div> 
